added todo list

--- a/NASA Space App/sackashit.html
+++ b/NASA Space App/sackashit.html
@@ -6,7 +6,13 @@
 	<link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    Hello world
+	<h1>To Do List:</h1>
+	<p>
+		We need to: <br/>
+		Get a map, and make it interactive by having scrolling seasons and the ability to compare 2 places, <br />
+		Find analysis of the data found on the NASA website, inclusing information on the geographic effects on blooming, <br />
+		And after all that, we'll have the basic idea done.
+	</p>
 	<script src="script.js"></script>
 </body>
 </html>
